--- a/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYc/std_kingdoms.xml
+++ b/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYc/std_kingdoms.xml
@@ -15,7 +15,7 @@
   <string id="kingdom.royalist_vlandia.short_name" text="Вландыйскае Раяліства"/>
   <string id="kingdom.royalist_vlandia.title" text="Вландыйскія Раялісты"/>
   <string id="kingdom.royalist_vlandia.ruler_title" text="Конунг"/>
-  <string id="kingdom.royalist_vlandia.text" text="Вландыя спачатку пашыралася на захад, а потым на поўнач Імперыі, захапляла землі і назапашвала багацьце, аднак, у выніку гэтай экспансіі Вландыйцы перастараліся, дазволілі палейцам паўстаць і захапіць большую частку заваяваных земляў заходняй і паўночнай Імперыі. Такі паварот падзей выклікаў абвастрэньне старых крыўд паміж шляхцічамі, і неўзабаве ў паветры разгарэлася паўстаньне. Дэртарт узнагародзіў землямі тых, хто быў яму найболей адданы і тых хто болей за ўсіх змагаўся за новыя землі. Аднак без падтрымкі паўночных шляхцічаў, безь іх запасаў і войскаў, новыя землі былі страчаны з-за паўстаньняў палейцаў, якіх даўно прыгняталі. Пасьля страты лепшых вершнікаў і стральцоў падчас паўстаньняў для вядзеньня грамадзянскай вайны спатрэбіўся грунт войскаў, таму арбалетнікі сталі асноўнай зброяй Вландыйцаў, бо для стральбы патрабавалася хуткая рыхтоўля. Для супраціву вершніцы сепаратыстаў таксама была створана пяхота з велізарнымі дзідамі."/>
+  <string id="kingdom.royalist_vlandia.text" text="Вландыя спачатку пашыралася на захад, а потым на поўнач Імперыі, захапляла землі і назапашвала багацьце, аднак, у выніку гэтай экспансіі Вландыйцы перастараліся, дазволілі палейцам паўстаць і захапіць большую частку заваяваных земляў заходняй і паўночнай Імперыі. Такі паварот падзей выклікаў абвастрэньне старых крыўд паміж шляхцічамі, і неўзабаве ў паветры разгарэлася паўстаньне. Дэртэрт узнагародзіў землямі тых, хто быў яму найболей адданы і тых хто болей за ўсіх змагаўся за новыя землі. Аднак без падтрымкі паўночных шляхцічаў, безь іх запасаў і войскаў, новыя землі былі страчаны з-за паўстаньняў палейцаў, якіх даўно прыгняталі. Пасьля страты лепшых вершнікаў і стральцоў падчас паўстаньняў для вядзеньня грамадзянскай вайны спатрэбіўся грунт войскаў, таму арбалетнікі сталі асноўнай зброяй Вландыйцаў, бо для стральбы патрабавалася хуткая рыхтоўля. Для супраціву вершніцы сепаратыстаў таксама была створана пяхота з велізарнымі дзідамі."/>
   <string id="kingdom.apolssaly.name" text="Аполсэлія"/>
   <string id="kingdom.apolssaly.short_name" text="Аполсэльская Ліга"/>
   <string id="kingdom.apolssaly.title" text="Аполсэльская Ліга"/>
@@ -25,7 +25,7 @@
   <string id="kingdom.lyrion.short_name" text="Лірыйскае Люкумства"/>
   <string id="kingdom.lyrion.title" text="Лірыйскае Люкумства"/>
   <string id="kingdom.lyrion.ruler_title" text="Конунг"/>
-  <string id="kingdom.lyrion.text" text="Лірыйцы прыбылі з паўднёва-ўсходніх земляў і імкліва заваявалі Эсэраяў. Дзякуючы майстэрскім стралкам і добра ўзброенай шляхце іх зьмяшаная тактыка здабыла верх над гандлярамі пустэльні Нахаса."/>
+  <string id="kingdom.lyrion.text" text="Лірыйцы прыбылі з паўднёва-ўсходніх земляў і імкліва заваявалі Асэраяў. Дзякуючы майстэрскім стралкам і добра ўзброенай шляхце іх зьмяшаная тактыка здабыла верх над гандлярамі пустэльні Нахаса."/>
   <string id="kingdom.rebel_khuzait.name" text="Хергіт"/>
   <string id="kingdom.rebel_khuzait.short_name" text="Хергіт"/>
   <string id="kingdom.rebel_khuzait.title" text="Хергіцкае Ханства"/>
@@ -40,6 +40,6 @@
   <string id="kingdom.ariorum.short_name" text="Арыёрум"/>
   <string id="kingdom.ariorum.title" text="Арыёрумская Гандлёвая Рэспубліка"/>
   <string id="kingdom.ariorum.ruler_title" text="Конунг"/>
-  <string id="kingdom.ariorum.text" text="Выспа была выйграны ў рызыковай гульні між Парфаліёсам і Імператарам Дросіясам, які за апошнія гады назапасіў шмат пазыкаў у сям'і Сэрапідас. Выспа ўрэгулявала іх. Парфаліёс змог стварыць на высьпе нейтральнае гаспадарства і ператварыць яго ў багаты гандлёвы цэнтар між поўначчу і поўднем."/>
+  <string id="kingdom.ariorum.text" text="Выспа была выйграны ў рызыковай гульні між Порфаліёсам і Імператарам Дросіясам, які за апошнія гады назапасіў шмат пазыкаў у сям'і Серапідэс. Выспа ўрэгулявала іх. Порфаліёсам змог стварыць на высьпе нейтральнае гаспадарства і ператварыць яго ў багаты гандлёвы цэнтар між поўначчу і поўднем."/>
  </strings>
 </base>
