--- a/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYc/std_troops.xml
+++ b/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYc/std_troops.xml
@@ -22,31 +22,31 @@
   <string id="npc.apolssalian_agrianian" text="Аполсэльскі Агрыянскі Пельтаст"/>
   <string id="npc.apolssalian_veteran_agrianian" text="Аполсэльскі Агрыянскі Пельтаст-Ветэран"/>
   <!--input/troops/aserai.xml-->
-  <string id="npc.aserai_recruit_new" text="Эсэрайскі Рэкрут"/>
-  <string id="npc.aserai_tribesman_new" text="Эсэрайскі Суродзіч"/>
-  <string id="npc.aserai_footman_new" text="Эсэрайскі Пехацінец"/>
-  <string id="npc.aserai_skirmisher_new" text="Эсэрайскі Застрэльнік"/>
-  <string id="npc.aserai_archer_new" text="Эсэрайскі Лучнік"/>
-  <string id="npc.aserai_master_archer_new" text="Эсэрайскі Каннаас"/>
-  <string id="npc.aserai_camel_recruit" text="Эсэрайскі Вярблюджы Наезьнік"/>
-  <string id="npc.aserai_camel_archer" text="Эсэрайскі Вярблюджы Лучнік"/>
-  <string id="npc.aserai_camel_marksman" text="Эсэрайскі Вярблюджы Каннаас"/>
-  <string id="npc.aserai_camel_warrior" text="Эсэрайскі Вярблюджы Ваяр"/>
-  <string id="npc.aserai_camel_lancer" text="Эсэрайскі Вярблюджы Улан"/>
-  <string id="npc.aserai_infantry_new" text="Эсэрайскі Пяхотнік"/>
-  <string id="npc.aserai_veteran_infantry_new" text="Эсэрайскі Пяхотнік-Ветэран"/>
-  <string id="npc.aserai_mameluke_soldier_new" text="Эсэрайскі Мамлюк-Салдат"/>
-  <string id="npc.aserai_mameluke_regular_new" text="Эсэрайскі Мамлюк-Коньнік"/>
-  <string id="npc.aserai_mameluke_cavalry_new" text="Эсэрайскі Мамлюк-Вершнік"/>
-  <string id="npc.aserai_mameluke_heavy_cavalry_new" text="Эсэрайскі Цяжкі Мамлюк-Вершнік"/>
-  <string id="npc.aserai_mameluke_axeman_new" text="Эсэрайскі Мамлюк-Сякірнік"/>
-  <string id="npc.aserai_mameluke_guard_new" text="Эсэрайскі Мамлюк-Гвардзеец"/>
-  <string id="npc.mamluke_palace_guard_new" text="Эсэрайскі Палацавы Мамлюк-Гвардзеец"/>
-  <string id="npc.aserai_youth_new" text="Эсэрайскі Шляхетны Маладзён"/>
-  <string id="npc.aserai_tribal_horseman_new" text="Эсэрайскі Пляменны Коньнік"/>
-  <string id="npc.aserai_faris_new" text="Эсэрайскі Фаарыс"/>
-  <string id="npc.aserai_veteran_faris_new" text="Эсэрайскі Фаарыс-Ветэран"/>
-  <string id="npc.aserai_vanguard_faris_new" text="Эсэрайскі Фаарыс-Талія"/>
+  <string id="npc.aserai_recruit_new" text="Асэрайскі Рэкрут"/>
+  <string id="npc.aserai_tribesman_new" text="Асэрайскі Суродзіч"/>
+  <string id="npc.aserai_footman_new" text="Асэрайскі Пехацінец"/>
+  <string id="npc.aserai_skirmisher_new" text="Асэрайскі Застрэльнік"/>
+  <string id="npc.aserai_archer_new" text="Асэрайскі Лучнік"/>
+  <string id="npc.aserai_master_archer_new" text="Асэрайскі Каннаас"/>
+  <string id="npc.aserai_camel_recruit" text="Асэрайскі Вярблюджы Наезьнік"/>
+  <string id="npc.aserai_camel_archer" text="Асэрайскі Вярблюджы Лучнік"/>
+  <string id="npc.aserai_camel_marksman" text="Асэрайскі Вярблюджы Каннаас"/>
+  <string id="npc.aserai_camel_warrior" text="Асэрайскі Вярблюджы Ваяр"/>
+  <string id="npc.aserai_camel_lancer" text="Асэрайскі Вярблюджы Улан"/>
+  <string id="npc.aserai_infantry_new" text="Асэрайскі Пяхотнік"/>
+  <string id="npc.aserai_veteran_infantry_new" text="Асэрайскі Пяхотнік-Ветэран"/>
+  <string id="npc.aserai_mameluke_soldier_new" text="Асэрайскі Мамлюк-Салдат"/>
+  <string id="npc.aserai_mameluke_regular_new" text="Асэрайскі Мамлюк-Коньнік"/>
+  <string id="npc.aserai_mameluke_cavalry_new" text="Асэрайскі Мамлюк-Вершнік"/>
+  <string id="npc.aserai_mameluke_heavy_cavalry_new" text="Асэрайскі Цяжкі Мамлюк-Вершнік"/>
+  <string id="npc.aserai_mameluke_axeman_new" text="Асэрайскі Мамлюк-Сякірнік"/>
+  <string id="npc.aserai_mameluke_guard_new" text="Асэрайскі Мамлюк-Гвардзеец"/>
+  <string id="npc.mamluke_palace_guard_new" text="Асэрайскі Палацавы Мамлюк-Гвардзеец"/>
+  <string id="npc.aserai_youth_new" text="Асэрайскі Шляхетны Маладзён"/>
+  <string id="npc.aserai_tribal_horseman_new" text="Асэрайскі Пляменны Коньнік"/>
+  <string id="npc.aserai_faris_new" text="Асэрайскі Фаарыс"/>
+  <string id="npc.aserai_veteran_faris_new" text="Асэрайскі Фаарыс-Ветэран"/>
+  <string id="npc.aserai_vanguard_faris_new" text="Асэрайскі Фаарыс-Талія"/>
   <!--input/troops/bandits.xml-->
   <string id="npc.looter" text="Рабаўнік"/>
   <string id="npc.pillager" text="Грабежнік"/>
@@ -175,34 +175,34 @@
   <string id="npc.vagir_militia_veteran_archer" text="Вагірскі Лучнік-Ветэран Рушэньня"/>
   <string id="npc.vagir_militia_spearman" text="Вагірскі Капійнік Рушэньня"/>
   <string id="npc.vagir_militia_veteran_spearman" text="Вагірскі Капійнік-Ветэран Рушэньня"/>
-  <string id="nDoENDqD" text="Эсэрайскі Майстар Караванаў"/>
+  <string id="nDoENDqD" text="Асэрайскі Майстар Караванаў"/>
   <string id="LKb8DXby" text="Баттанійскі Майстар Караванаў"/>
   <string id="TpECDErA" text="Імперскі Майстар Караванаў"/>
   <string id="WEHDGbEE" text="Хузаіцкі Майстар Караванаў"/>
   <string id="uDseaKcb" text="Стургійскі Майстар Караванаў"/>
   <string id="QbSjMefR" text="Вландыйскі Майстар Караванаў"/>
-  <string id="8TdbKFa9" text="Эсэрайскі Узброены Гандляр"/>
+  <string id="8TdbKFa9" text="Асэрайскі Узброены Гандляр"/>
   <string id="v8hRrmY2" text="Баттанійскі Узброены Гандляр"/>
   <string id="LEJukldW" text="Імперскі Узброены Гандляр"/>
   <string id="l6NFOl8c" text="Хузаіцкі Узброены Гандляр"/>
   <string id="cPQx1RXt" text="Стургійскі Узброены Гандляр"/>
   <string id="X12lazIs" text="Вландыйскі Узброены Гандляр"/>
-  <string id="yG42k5GC" text="Эсэрайскі Ахоўнік Караванаў"/>
+  <string id="yG42k5GC" text="Асэрайскі Ахоўнік Караванаў"/>
   <string id="qfaTMEBw" text="Баттанійскі Ахоўнік Караванаў"/>
   <string id="TbBnWiao" text="Імперскі Ахоўнік Караванаў"/>
   <string id="THOfB9DZ" text="Хузаіцкі Ахоўнік Караванаў"/>
   <string id="pzmgMODE" text="Стургійскі Ахоўнік Караванаў"/>
   <string id="rQ0t0Wws" text="Вландыйскі Ахоўнік Караванаў"/>
-  <string id="QlVeZvbv" text="Эсэрайскі Ахоўнік Караванаў Ветэран"/>
+  <string id="QlVeZvbv" text="Асэрайскі Ахоўнік Караванаў Ветэран"/>
   <string id="juBPAThy" text="Баттанійскі Ахоўнік Караванаў Ветэран"/>
   <string id="bLq2HXMo" text="Імперскі Ахоўнік Караванаў Ветэран"/>
   <string id="6hhspFvz" text="Хузаіцкі Ахоўнік Караванаў Ветэран"/>
   <string id="0GkJB08d" text="Стургійскі Ахоўнік Караванаў Ветэран"/>
   <string id="YE4RGuzU" text="Вландыйскі Ахоўнік Караванаў Ветэран"/>
-  <string id="CPcJ2gRF" text="Эсэрайскі Лучнік Рушэньня"/>
-  <string id="tL6aGah4" text="Эсэрайскі Лучнік-Ветэран Рушэньня"/>
-  <string id="ULaNn3pp" text="Эсэрайскі Капійнік Рушэньня"/>
-  <string id="Pd9qAiOu" text="Эсэрайскі Капійнік-Ветэран Рушэньня"/>
+  <string id="CPcJ2gRF" text="Асэрайскі Лучнік Рушэньня"/>
+  <string id="tL6aGah4" text="Асэрайскі Лучнік-Ветэран Рушэньня"/>
+  <string id="ULaNn3pp" text="Асэрайскі Капійнік Рушэньня"/>
+  <string id="Pd9qAiOu" text="Асэрайскі Капійнік-Ветэран Рушэньня"/>
   <string id="vkuJeNSa" text="Вландыйскі Лучнік Рушэньня"/>
   <string id="DNIa6a5p" text="Вландыйскі Лучнік-Ветэран Рушэньня"/>
   <string id="aUHtqC9o" text="Вландыйскі Капійнік Рушэньня"/>
@@ -416,25 +416,25 @@
   <string id="npc.sturgian_veteran_soldier" text="Стургійскі Загартаваны Салдат"/>
   <string id="npc.sturgian_voyak" text="Стургійскі Ваяўнік"/>
   <!--input/troops/swadia.xml-->
-  <string id="npc.vlandian_recruit_new" text="Кортанскі Рэкрут"/>
-  <string id="npc.vlandian_footman_new" text="Кортанскі Пяхотны"/>
-  <string id="npc.vlandian_spearman_new" text="Кортанскі Кайпійнік"/>
-  <string id="npc.vlandian_infantry_new" text="Кортанскі Пяхотнік"/>
-  <string id="npc.vlandian_swordsman_new" text="Кортанскі Мечнік"/>
-  <string id="npc.vlandian_sergeant_new" text="Кортанскі Сяржант"/>
-  <string id="npc.vlandian_trained_spearman" text="Кортанскі Падрыхтаваны Кайпійнік"/>
-  <string id="npc.vlandian_spear_sergeant_new" text="Кортанскі Кайпіны Сяржант"/>
-  <string id="npc.vlandian_light_cavalry_new" text="Кортанскі Лёгкі Вершнік"/>
-  <string id="npc.vlandian_vanguard_new" text="Кортанскі Авангард"/>
-  <string id="npc.vlandian_levy_crossbowman_new" text="Кортанскі Заклічны Лучнік"/>
-  <string id="npc.vlandian_crossbowman_new" text="Кортанскі Лучнік"/>
-  <string id="npc.vlandian_hardened_crossbowman_new" text="Кортанскі Доўгалучнік"/>
-  <string id="npc.vlandian_sharpshooter_new" text="Кортанскі Снайпер"/>
-  <string id="npc.vlandian_squire_new" text="Кортанскі Экўер"/>
-  <string id="npc.vlandian_gallant_new" text="Кортанскі Галлант"/>
-  <string id="npc.vlandian_knight_new" text="Кортанскі Шэвалье"/>
-  <string id="npc.vlandian_champion_new" text="Кортанскі Шэвалье-Чэмпіён"/>
-  <string id="npc.vlandian_banner_knight_new" text="Кортанскі Гаспадарскі Шэвалье"/>
+  <string id="npc.vlandian_recruit_new" text="Кортайнскі Рэкрут"/>
+  <string id="npc.vlandian_footman_new" text="Кортайнскі Пяхотны"/>
+  <string id="npc.vlandian_spearman_new" text="Кортайнскі Кайпійнік"/>
+  <string id="npc.vlandian_infantry_new" text="Кортайнскі Пяхотнік"/>
+  <string id="npc.vlandian_swordsman_new" text="Кортайнскі Мечнік"/>
+  <string id="npc.vlandian_sergeant_new" text="Кортайнскі Сяржант"/>
+  <string id="npc.vlandian_trained_spearman" text="Кортайнскі Падрыхтаваны Кайпійнік"/>
+  <string id="npc.vlandian_spear_sergeant_new" text="Кортайнскі Кайпіны Сяржант"/>
+  <string id="npc.vlandian_light_cavalry_new" text="Кортайнскі Лёгкі Вершнік"/>
+  <string id="npc.vlandian_vanguard_new" text="Кортайнскі Авангард"/>
+  <string id="npc.vlandian_levy_crossbowman_new" text="Кортайнскі Заклічны Лучнік"/>
+  <string id="npc.vlandian_crossbowman_new" text="Кортайнскі Лучнік"/>
+  <string id="npc.vlandian_hardened_crossbowman_new" text="Кортайнскі Доўгалучнік"/>
+  <string id="npc.vlandian_sharpshooter_new" text="Кортайнскі Снайпер"/>
+  <string id="npc.vlandian_squire_new" text="Кортайнскі Экўер"/>
+  <string id="npc.vlandian_gallant_new" text="Кортайнскі Галлант"/>
+  <string id="npc.vlandian_knight_new" text="Кортайнскі Шэвалье"/>
+  <string id="npc.vlandian_champion_new" text="Кортайнскі Шэвалье-Чэмпіён"/>
+  <string id="npc.vlandian_banner_knight_new" text="Кортайнскі Гаспадарскі Шэвалье"/>
   <!--input/troops/vagir.xml-->
   <string id="npc.vagir_recruit" text="Вагірскі Суродзіч"/>
   <string id="npc.vagir_warrior" text="Вагірскі Ваяр"/>
