--- a/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYl/std_kingdoms.xml
+++ b/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYl/std_kingdoms.xml
@@ -15,7 +15,7 @@
   <string id="kingdom.royalist_vlandia.short_name" text="Vłandyjskaje Rajalistva"/>
   <string id="kingdom.royalist_vlandia.title" text="Vłandyjskija Rajalisty"/>
   <string id="kingdom.royalist_vlandia.ruler_title" text="Konunh"/>
-  <string id="kingdom.royalist_vlandia.text" text="Vłandyja spačatku pašyrałasia na zachad, a potym na poŭnač Impieryi, zachaplała ziemli i nazapašvała bahaćcie, adnak, u vyniku hetaj ekspansii Vłandyjcy pierastaralisia, dazvolili palejcam paŭstać i zachapić bolšuju častku zavajavanych ziemlaŭ zachodniaj i paŭnočnaj Impieryi. Taki pavarot padziej vyklikaŭ abvastreńnie starych kryŭd pamiž šlachcičami, i nieŭzabavie ŭ pavietry razharełasia paŭstańnie. Dertart uznaharodziŭ ziemlami tych, chto byŭ jamu najbolej addany i tych chto bolej za ŭsich zmahaŭsia za novyja ziemli. Adnak biez padtrymki paŭnočnych šlachcičaŭ, bieź ich zapasaŭ i vojskaŭ, novyja ziemli byli stračany z-za paŭstańniaŭ palejcaŭ, jakich daŭno pryhniatali. Paśla straty lepšych vieršnikaŭ i stralcoŭ padčas paŭstańniaŭ dla viadzieńnia hramadzianskaj vajny spatrebiŭsia hrunt vojskaŭ, tamu arbaletniki stali asnoŭnaj zbrojaj Vłandyjcaŭ, bo dla stralby patrabavałasia chutkaja rychtoŭla. Dla supracivu vieršnicy sieparatystaŭ taksama była stvorana piachota z vielizarnymi dzidami."/>
+  <string id="kingdom.royalist_vlandia.text" text="Vłandyja spačatku pašyrałasia na zachad, a potym na poŭnač Impieryi, zachaplała ziemli i nazapašvała bahaćcie, adnak, u vyniku hetaj ekspansii Vłandyjcy pierastaralisia, dazvolili palejcam paŭstać i zachapić bolšuju častku zavajavanych ziemlaŭ zachodniaj i paŭnočnaj Impieryi. Taki pavarot padziej vyklikaŭ abvastreńnie starych kryŭd pamiž šlachcičami, i nieŭzabavie ŭ pavietry razharełasia paŭstańnie. Dertert uznaharodziŭ ziemlami tych, chto byŭ jamu najbolej addany i tych chto bolej za ŭsich zmahaŭsia za novyja ziemli. Adnak biez padtrymki paŭnočnych šlachcičaŭ, bieź ich zapasaŭ i vojskaŭ, novyja ziemli byli stračany z-za paŭstańniaŭ palejcaŭ, jakich daŭno pryhniatali. Paśla straty lepšych vieršnikaŭ i stralcoŭ padčas paŭstańniaŭ dla viadzieńnia hramadzianskaj vajny spatrebiŭsia hrunt vojskaŭ, tamu arbaletniki stali asnoŭnaj zbrojaj Vłandyjcaŭ, bo dla stralby patrabavałasia chutkaja rychtoŭla. Dla supracivu vieršnicy sieparatystaŭ taksama była stvorana piachota z vielizarnymi dzidami."/>
   <string id="kingdom.apolssaly.name" text="Apołselija"/>
   <string id="kingdom.apolssaly.short_name" text="Apołselskaja Liha"/>
   <string id="kingdom.apolssaly.title" text="Apołselskaja Liha"/>
@@ -25,7 +25,7 @@
   <string id="kingdom.lyrion.short_name" text="Liryjskaje Lukumstva"/>
   <string id="kingdom.lyrion.title" text="Liryjskaje Lukumstva"/>
   <string id="kingdom.lyrion.ruler_title" text="Konunh"/>
-  <string id="kingdom.lyrion.text" text="Liryjcy prybyli z paŭdniova-ŭschodnich ziemlaŭ i imkliva zavajavali Eserajaŭ. Dziakujučy majsterskim strałkam i dobra ŭzbrojenaj šlachcie ich źmiašanaja taktyka zdabyła vierch nad handlarami pustelni Nachasa."/>
+  <string id="kingdom.lyrion.text" text="Liryjcy prybyli z paŭdniova-ŭschodnich ziemlaŭ i imkliva zavajavali Aserajaŭ. Dziakujučy majsterskim strałkam i dobra ŭzbrojenaj šlachcie ich źmiašanaja taktyka zdabyła vierch nad handlarami pustelni Nachasa."/>
   <string id="kingdom.rebel_khuzait.name" text="Chierhit"/>
   <string id="kingdom.rebel_khuzait.short_name" text="Chierhit"/>
   <string id="kingdom.rebel_khuzait.title" text="Chierhickaje Chanstva"/>
@@ -40,6 +40,6 @@
   <string id="kingdom.ariorum.short_name" text="Aryjorum"/>
   <string id="kingdom.ariorum.title" text="Aryjorumskaja Handlovaja Respublika"/>
   <string id="kingdom.ariorum.ruler_title" text="Konunh"/>
-  <string id="kingdom.ariorum.text" text="Vyspa była vyjhrany ŭ ryzykovaj hulni miž Parfalijosam i Impierataram Drosijasam, jaki za apošnija hady nazapasiŭ šmat pazykaŭ u siamji Serapidas. Vyspa ŭrehulavała ich. Parfalijos zmoh stvaryć na vyśpie niejtralnaje haspadarstva i pieratvaryć jaho ŭ bahaty handlovy centar miž poŭnačču i poŭdniem."/>
+  <string id="kingdom.ariorum.text" text="Vyspa była vyjhrany ŭ ryzykovaj hulni miž Porfalijosam i Impierataram Drosijasam, jaki za apošnija hady nazapasiŭ šmat pazykaŭ u siamji Sierapides. Vyspa ŭrehulavała ich. Porfalijosam zmoh stvaryć na vyśpie niejtralnaje haspadarstva i pieratvaryć jaho ŭ bahaty handlovy centar miž poŭnačču i poŭdniem."/>
  </strings>
 </base>
