--- a/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYl/std_troops.xml
+++ b/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYl/std_troops.xml
@@ -22,31 +22,31 @@
   <string id="npc.apolssalian_agrianian" text="Apołselski Ahryjanski Pieltast"/>
   <string id="npc.apolssalian_veteran_agrianian" text="Apołselski Ahryjanski Pieltast-Vieteran"/>
   <!--input/troops/aserai.xml-->
-  <string id="npc.aserai_recruit_new" text="Eserajski Rekrut"/>
-  <string id="npc.aserai_tribesman_new" text="Eserajski Surodzič"/>
-  <string id="npc.aserai_footman_new" text="Eserajski Piechaciniec"/>
-  <string id="npc.aserai_skirmisher_new" text="Eserajski Zastrelnik"/>
-  <string id="npc.aserai_archer_new" text="Eserajski Łučnik"/>
-  <string id="npc.aserai_master_archer_new" text="Eserajski Kannaas"/>
-  <string id="npc.aserai_camel_recruit" text="Eserajski Viarbludžy Najeźnik"/>
-  <string id="npc.aserai_camel_archer" text="Eserajski Viarbludžy Łučnik"/>
-  <string id="npc.aserai_camel_marksman" text="Eserajski Viarbludžy Kannaas"/>
-  <string id="npc.aserai_camel_warrior" text="Eserajski Viarbludžy Vajar"/>
-  <string id="npc.aserai_camel_lancer" text="Eserajski Viarbludžy Ułan"/>
-  <string id="npc.aserai_infantry_new" text="Eserajski Piachotnik"/>
-  <string id="npc.aserai_veteran_infantry_new" text="Eserajski Piachotnik-Vieteran"/>
-  <string id="npc.aserai_mameluke_soldier_new" text="Eserajski Mamluk-Sałdat"/>
-  <string id="npc.aserai_mameluke_regular_new" text="Eserajski Mamluk-Końnik"/>
-  <string id="npc.aserai_mameluke_cavalry_new" text="Eserajski Mamluk-Vieršnik"/>
-  <string id="npc.aserai_mameluke_heavy_cavalry_new" text="Eserajski Ciažki Mamluk-Vieršnik"/>
-  <string id="npc.aserai_mameluke_axeman_new" text="Eserajski Mamluk-Siakirnik"/>
-  <string id="npc.aserai_mameluke_guard_new" text="Eserajski Mamluk-Hvardziejec"/>
-  <string id="npc.mamluke_palace_guard_new" text="Eserajski Pałacavy Mamluk-Hvardziejec"/>
-  <string id="npc.aserai_youth_new" text="Eserajski Šlachietny Maładzion"/>
-  <string id="npc.aserai_tribal_horseman_new" text="Eserajski Plamienny Końnik"/>
-  <string id="npc.aserai_faris_new" text="Eserajski Faarys"/>
-  <string id="npc.aserai_veteran_faris_new" text="Eserajski Faarys-Vieteran"/>
-  <string id="npc.aserai_vanguard_faris_new" text="Eserajski Faarys-Talija"/>
+  <string id="npc.aserai_recruit_new" text="Aserajski Rekrut"/>
+  <string id="npc.aserai_tribesman_new" text="Aserajski Surodzič"/>
+  <string id="npc.aserai_footman_new" text="Aserajski Piechaciniec"/>
+  <string id="npc.aserai_skirmisher_new" text="Aserajski Zastrelnik"/>
+  <string id="npc.aserai_archer_new" text="Aserajski Łučnik"/>
+  <string id="npc.aserai_master_archer_new" text="Aserajski Kannaas"/>
+  <string id="npc.aserai_camel_recruit" text="Aserajski Viarbludžy Najeźnik"/>
+  <string id="npc.aserai_camel_archer" text="Aserajski Viarbludžy Łučnik"/>
+  <string id="npc.aserai_camel_marksman" text="Aserajski Viarbludžy Kannaas"/>
+  <string id="npc.aserai_camel_warrior" text="Aserajski Viarbludžy Vajar"/>
+  <string id="npc.aserai_camel_lancer" text="Aserajski Viarbludžy Ułan"/>
+  <string id="npc.aserai_infantry_new" text="Aserajski Piachotnik"/>
+  <string id="npc.aserai_veteran_infantry_new" text="Aserajski Piachotnik-Vieteran"/>
+  <string id="npc.aserai_mameluke_soldier_new" text="Aserajski Mamluk-Sałdat"/>
+  <string id="npc.aserai_mameluke_regular_new" text="Aserajski Mamluk-Końnik"/>
+  <string id="npc.aserai_mameluke_cavalry_new" text="Aserajski Mamluk-Vieršnik"/>
+  <string id="npc.aserai_mameluke_heavy_cavalry_new" text="Aserajski Ciažki Mamluk-Vieršnik"/>
+  <string id="npc.aserai_mameluke_axeman_new" text="Aserajski Mamluk-Siakirnik"/>
+  <string id="npc.aserai_mameluke_guard_new" text="Aserajski Mamluk-Hvardziejec"/>
+  <string id="npc.mamluke_palace_guard_new" text="Aserajski Pałacavy Mamluk-Hvardziejec"/>
+  <string id="npc.aserai_youth_new" text="Aserajski Šlachietny Maładzion"/>
+  <string id="npc.aserai_tribal_horseman_new" text="Aserajski Plamienny Końnik"/>
+  <string id="npc.aserai_faris_new" text="Aserajski Faarys"/>
+  <string id="npc.aserai_veteran_faris_new" text="Aserajski Faarys-Vieteran"/>
+  <string id="npc.aserai_vanguard_faris_new" text="Aserajski Faarys-Talija"/>
   <!--input/troops/bandits.xml-->
   <string id="npc.looter" text="Rabaŭnik"/>
   <string id="npc.pillager" text="Hrabiežnik"/>
@@ -175,34 +175,34 @@
   <string id="npc.vagir_militia_veteran_archer" text="Vahirski Łučnik-Vieteran Rušeńnia"/>
   <string id="npc.vagir_militia_spearman" text="Vahirski Kapijnik Rušeńnia"/>
   <string id="npc.vagir_militia_veteran_spearman" text="Vahirski Kapijnik-Vieteran Rušeńnia"/>
-  <string id="nDoENDqD" text="Eserajski Majstar Karavanaŭ"/>
+  <string id="nDoENDqD" text="Aserajski Majstar Karavanaŭ"/>
   <string id="LKb8DXby" text="Battanijski Majstar Karavanaŭ"/>
   <string id="TpECDErA" text="Impierski Majstar Karavanaŭ"/>
   <string id="WEHDGbEE" text="Chuzaicki Majstar Karavanaŭ"/>
   <string id="uDseaKcb" text="Sturhijski Majstar Karavanaŭ"/>
   <string id="QbSjMefR" text="Vłandyjski Majstar Karavanaŭ"/>
-  <string id="8TdbKFa9" text="Eserajski Uzbrojeny Handlar"/>
+  <string id="8TdbKFa9" text="Aserajski Uzbrojeny Handlar"/>
   <string id="v8hRrmY2" text="Battanijski Uzbrojeny Handlar"/>
   <string id="LEJukldW" text="Impierski Uzbrojeny Handlar"/>
   <string id="l6NFOl8c" text="Chuzaicki Uzbrojeny Handlar"/>
   <string id="cPQx1RXt" text="Sturhijski Uzbrojeny Handlar"/>
   <string id="X12lazIs" text="Vłandyjski Uzbrojeny Handlar"/>
-  <string id="yG42k5GC" text="Eserajski Achoŭnik Karavanaŭ"/>
+  <string id="yG42k5GC" text="Aserajski Achoŭnik Karavanaŭ"/>
   <string id="qfaTMEBw" text="Battanijski Achoŭnik Karavanaŭ"/>
   <string id="TbBnWiao" text="Impierski Achoŭnik Karavanaŭ"/>
   <string id="THOfB9DZ" text="Chuzaicki Achoŭnik Karavanaŭ"/>
   <string id="pzmgMODE" text="Sturhijski Achoŭnik Karavanaŭ"/>
   <string id="rQ0t0Wws" text="Vłandyjski Achoŭnik Karavanaŭ"/>
-  <string id="QlVeZvbv" text="Eserajski Achoŭnik Karavanaŭ Vieteran"/>
+  <string id="QlVeZvbv" text="Aserajski Achoŭnik Karavanaŭ Vieteran"/>
   <string id="juBPAThy" text="Battanijski Achoŭnik Karavanaŭ Vieteran"/>
   <string id="bLq2HXMo" text="Impierski Achoŭnik Karavanaŭ Vieteran"/>
   <string id="6hhspFvz" text="Chuzaicki Achoŭnik Karavanaŭ Vieteran"/>
   <string id="0GkJB08d" text="Sturhijski Achoŭnik Karavanaŭ Vieteran"/>
   <string id="YE4RGuzU" text="Vłandyjski Achoŭnik Karavanaŭ Vieteran"/>
-  <string id="CPcJ2gRF" text="Eserajski Łučnik Rušeńnia"/>
-  <string id="tL6aGah4" text="Eserajski Łučnik-Vieteran Rušeńnia"/>
-  <string id="ULaNn3pp" text="Eserajski Kapijnik Rušeńnia"/>
-  <string id="Pd9qAiOu" text="Eserajski Kapijnik-Vieteran Rušeńnia"/>
+  <string id="CPcJ2gRF" text="Aserajski Łučnik Rušeńnia"/>
+  <string id="tL6aGah4" text="Aserajski Łučnik-Vieteran Rušeńnia"/>
+  <string id="ULaNn3pp" text="Aserajski Kapijnik Rušeńnia"/>
+  <string id="Pd9qAiOu" text="Aserajski Kapijnik-Vieteran Rušeńnia"/>
   <string id="vkuJeNSa" text="Vłandyjski Łučnik Rušeńnia"/>
   <string id="DNIa6a5p" text="Vłandyjski Łučnik-Vieteran Rušeńnia"/>
   <string id="aUHtqC9o" text="Vłandyjski Kapijnik Rušeńnia"/>
@@ -416,25 +416,25 @@
   <string id="npc.sturgian_veteran_soldier" text="Sturhijski Zahartavany Sałdat"/>
   <string id="npc.sturgian_voyak" text="Sturhijski Vajaŭnik"/>
   <!--input/troops/swadia.xml-->
-  <string id="npc.vlandian_recruit_new" text="Kortanski Rekrut"/>
-  <string id="npc.vlandian_footman_new" text="Kortanski Piachotny"/>
-  <string id="npc.vlandian_spearman_new" text="Kortanski Kajpijnik"/>
-  <string id="npc.vlandian_infantry_new" text="Kortanski Piachotnik"/>
-  <string id="npc.vlandian_swordsman_new" text="Kortanski Miečnik"/>
-  <string id="npc.vlandian_sergeant_new" text="Kortanski Siaržant"/>
-  <string id="npc.vlandian_trained_spearman" text="Kortanski Padrychtavany Kajpijnik"/>
-  <string id="npc.vlandian_spear_sergeant_new" text="Kortanski Kajpiny Siaržant"/>
-  <string id="npc.vlandian_light_cavalry_new" text="Kortanski Lohki Vieršnik"/>
-  <string id="npc.vlandian_vanguard_new" text="Kortanski Avanhard"/>
-  <string id="npc.vlandian_levy_crossbowman_new" text="Kortanski Zakličny Łučnik"/>
-  <string id="npc.vlandian_crossbowman_new" text="Kortanski Łučnik"/>
-  <string id="npc.vlandian_hardened_crossbowman_new" text="Kortanski Doŭhałučnik"/>
-  <string id="npc.vlandian_sharpshooter_new" text="Kortanski Snajpier"/>
-  <string id="npc.vlandian_squire_new" text="Kortanski Ekŭjer"/>
-  <string id="npc.vlandian_gallant_new" text="Kortanski Hałłant"/>
-  <string id="npc.vlandian_knight_new" text="Kortanski Ševalje"/>
-  <string id="npc.vlandian_champion_new" text="Kortanski Ševalje-Čempijon"/>
-  <string id="npc.vlandian_banner_knight_new" text="Kortanski Haspadarski Ševalje"/>
+  <string id="npc.vlandian_recruit_new" text="Kortajnski Rekrut"/>
+  <string id="npc.vlandian_footman_new" text="Kortajnski Piachotny"/>
+  <string id="npc.vlandian_spearman_new" text="Kortajnski Kajpijnik"/>
+  <string id="npc.vlandian_infantry_new" text="Kortajnski Piachotnik"/>
+  <string id="npc.vlandian_swordsman_new" text="Kortajnski Miečnik"/>
+  <string id="npc.vlandian_sergeant_new" text="Kortajnski Siaržant"/>
+  <string id="npc.vlandian_trained_spearman" text="Kortajnski Padrychtavany Kajpijnik"/>
+  <string id="npc.vlandian_spear_sergeant_new" text="Kortajnski Kajpiny Siaržant"/>
+  <string id="npc.vlandian_light_cavalry_new" text="Kortajnski Lohki Vieršnik"/>
+  <string id="npc.vlandian_vanguard_new" text="Kortajnski Avanhard"/>
+  <string id="npc.vlandian_levy_crossbowman_new" text="Kortajnski Zakličny Łučnik"/>
+  <string id="npc.vlandian_crossbowman_new" text="Kortajnski Łučnik"/>
+  <string id="npc.vlandian_hardened_crossbowman_new" text="Kortajnski Doŭhałučnik"/>
+  <string id="npc.vlandian_sharpshooter_new" text="Kortajnski Snajpier"/>
+  <string id="npc.vlandian_squire_new" text="Kortajnski Ekŭjer"/>
+  <string id="npc.vlandian_gallant_new" text="Kortajnski Hałłant"/>
+  <string id="npc.vlandian_knight_new" text="Kortajnski Ševalje"/>
+  <string id="npc.vlandian_champion_new" text="Kortajnski Ševalje-Čempijon"/>
+  <string id="npc.vlandian_banner_knight_new" text="Kortajnski Haspadarski Ševalje"/>
   <!--input/troops/vagir.xml-->
   <string id="npc.vagir_recruit" text="Vahirski Surodzič"/>
   <string id="npc.vagir_warrior" text="Vahirski Vajar"/>
