--- a/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYc/std_strings.xml
+++ b/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYc/std_strings.xml
@@ -5,11 +5,11 @@
   <string id="str.str_culture_description.vagir" text="Вагіры - гэта сумесь паўночнікаў Стургіі і незадаволеных Баттанійцаў. Гэтае перакрыжаваньне культураў зрабіла іх моцнымі і трывалымі, здольнымі з лёгкасьцю пераадольваць густыя сьнегапады і глухія лясы. Здаецца, пакуль іх суседзі маюць намер ваяваць адзін з адным, яны спадзяюцца, што гэта дасьць ім час умацавацца і падрыхтавацца да прыходу вайны ў маладое гаспадарства."/>
   <string id="str.str_culture_description.rhodok" text="Вландыйцы - нашчадкі авантурыстаў з захаду, якія стагодзьдзямі жылі пад уладай Імперыі, перш чым сфармаваць незалежнае каралеўства. З заняпадам Імперскай улады яны ператварыліся ў добра арганізаванае феадальнае грамадства, узначаленае кастай ваяўнічых шляхцічаў, якія аддаюць перавагу вайне дзідамі на конях і пешым."/>
   <string id="str.str_culture_description.apolssalian" text="Аполсэльцы прыйшлі з поўдня. Яны ваююць добра арганізаванымі фалангамі капійнікаў пры падтрымцы хуткай вершніцы. Аполсэльцы валодаюць добрымі інжынернымі ведамі, а клас гандляроў ашчадны і праніклівы. Гэтае спалучэньне прыводзіць да добрага забясьпечэньня гаспадарства. Хаця існуе нейкая сьціснутасьць у сродках, калі справа даходзіць да раздачы золата."/>
-  <string id="str.str_culture_description.lyrion" text="Лірыйцы прыбылі з паўднёва-ўсходніх земляў і імкліва заваявалі Эсэраяў. Дзякуючы майстэрскім стралкам і добра ўзброенай шляхце іх зьмяшаная тактыка здабыла верх над гандлярамі пустэльні Нахаса."/>
+  <string id="str.str_culture_description.lyrion" text="Лірыйцы прыбылі з паўднёва-ўсходніх земляў і імкліва заваявалі Асэраяў. Дзякуючы майстэрскім стралкам і добра ўзброенай шляхце іх зьмяшаная тактыка здабыла верх над гандлярамі пустэльні Нахаса."/>
   <string id="str.str_culture_description.rebkhu" text="Хергіты поўныя рашучасьці засяляць свае землі і бараніць іхнія межы. Каб ажыцявіць гэтае, яны імкнуцца хутка атрымаць прасунутыя інжынерныя веды. З'яўляючыся ў культурным спрычыненьні майстэрскімі вершнікамі і гістарычнымі качэўнікамі, іх лідары прасоўваюць сваю культуру наперад у інтэлектуальным плане, што прыводзіць да неадназначных вынікаў."/>
   <string id="str.str_culture_description.paleician" text="Карэнны народ Кальрадыі, палейцы, на працягу многіх стагодзьдзяў прыгнетаўся і выкарыстоўваўся як другі гатунак амаль усімі іншымі гаспадарствамі гэтага края, але не цяпер. Палейцы скарысталіся хаосам вайны і паўсталі, каб заявіць свае правы на Кальрадыю. Яны забралі большую частку зброі і брані ў зрынутых Вландыйцаў ды хутка спрабуюць зацьвердзіцца ў якасьці сапраўдных гаспадароў гэтага края."/>
   <string id="str.str_culture_description.republic" text="Драятычная Рэспубліка кіруецца народам для народа. Для гэтага абіраюцца сенатары і службоўцы, якія адказваюць перад абраным кангрэсам. Хаця гэтая бюракратыя запавольвае прыняцьце часткі пастановаў, яна прыводзіць да ўзросту пачуцьця служэньня і абавязку сярод насельніцтва."/>
-  <string id="str.str_culture_description.ariorum" text="Выспа была выйграны ў рызыковай гульні між Парфаліёсам і Імператарам Дросіясам, які за апошнія гады назапасіў шмат пазыкаў у сям'і Сэрапідас. Выспа ўрэгулявала іх. Парфаліёс змог стварыць на высьпе нейтральнае гаспадарства і ператварыць яго ў багаты гандлёвы цэнтар між поўначчу і поўднем."/>
+  <string id="str.str_culture_description.ariorum" text="Выспа была выйграны ў рызыковай гульні між Порфаліёсам і Імператарам Дросіясам, які за апошнія гады назапасіў шмат пазыкаў у сям'і Серапідэс. Выспа ўрэгулявала іх. Порфаліёсам змог стварыць на высьпе нейтральнае гаспадарства і ператварыць яго ў багаты гандлёвы цэнтар між поўначчу і поўднем."/>
   <string id="str.str_culture_rich_name.nordling" text="Нордлінг"/>
   <string id="str.str_culture_rich_name.vagir" text="Вагір"/>
   <string id="str.str_culture_rich_name.rhodok" text="Родак"/>
@@ -66,7 +66,7 @@
   <string id="str.str_faction_formal_name_for_culture.rhodok" text="Вландыйскае Раяліства"/>
   <string id="str.str_neutral_term_for_culture.rhodok" text="Вландыйскае Раяліства"/>
   <string id="str.str_player_brother_name.rhodok" text="Ноганд"/>
-  <string id="str.str_player_father_name.rhodok" text="Болдрым"/>
+  <string id="str.str_player_father_name.rhodok" text="Бальдрым"/>
   <string id="str.str_player_mother_name.rhodok" text="Тэрта"/>
   <string id="str.str_player_little_brother_name.rhodok" text="Варык"/>
   <string id="str.str_player_little_sister_name.rhodok" text="Альда"/>
@@ -81,7 +81,7 @@
   <string id="str.str_neutral_term_for_culture.apolssalian" text="Аполсэлія"/>
   <string id="str.str_player_brother_name.apolssalian" text="Нэйджын"/>
   <string id="str.str_player_father_name.apolssalian" text="Баладзір"/>
-  <string id="str.str_player_mother_name.apolssalian" text="Тайра"/>
+  <string id="str.str_player_mother_name.apolssalian" text="Ціра"/>
   <string id="str.str_player_little_brother_name.apolssalian" text="Фацід"/>
   <string id="str.str_player_little_sister_name.apolssalian" text="Алія"/>
   <string id="str.str_faction_official.lyrion" text="эбры"/>
@@ -95,7 +95,7 @@
   <string id="str.str_neutral_term_for_culture.lyrion" text="Лірыя"/>
   <string id="str.str_player_brother_name.lyrion" text="Нэйджын"/>
   <string id="str.str_player_father_name.lyrion" text="Баладзір"/>
-  <string id="str.str_player_mother_name.lyrion" text="Тайра"/>
+  <string id="str.str_player_mother_name.lyrion" text="Ціра"/>
   <string id="str.str_player_little_brother_name.lyrion" text="Фацід"/>
   <string id="str.str_player_little_sister_name.lyrion" text="Алія"/>
   <string id="str.str_faction_official.rebkhu" text="бег"/>
@@ -122,9 +122,9 @@
   <string id="str.str_faction_formal_name_for_culture.paleician" text="Палейцкая Імперыя"/>
   <string id="str.str_neutral_term_for_culture.paleician" text="Палейцыя"/>
   <string id="str.str_player_brother_name.paleician" text="Нэтанас"/>
-  <string id="str.str_player_father_name.paleician" text="Болдзімас"/>
-  <string id="str.str_player_mother_name.paleician" text="Цырыя"/>
-  <string id="str.str_player_little_brother_name.paleician" text="Фэйсас"/>
+  <string id="str.str_player_father_name.paleician" text="Балдзімос"/>
+  <string id="str.str_player_mother_name.paleician" text="Тэрэя"/>
+  <string id="str.str_player_little_brother_name.paleician" text="Фасос"/>
   <string id="str.str_player_little_sister_name.paleician" text="Элія"/>
   <string id="str.str_faction_official.republic" text="магістрат"/>
   <string id="str.str_faction_official.republic_f" text="магістрат"/>
@@ -136,9 +136,9 @@
   <string id="str.str_faction_formal_name_for_culture.republic" text="Кальрадыйская Рэспубліка"/>
   <string id="str.str_neutral_term_for_culture.republic" text="Рэспубліка"/>
   <string id="str.str_player_brother_name.republic" text="Нэтанас"/>
-  <string id="str.str_player_father_name.republic" text="Болдзімас"/>
-  <string id="str.str_player_mother_name.republic" text="Цырыя"/>
-  <string id="str.str_player_little_brother_name.republic" text="Фэйсас"/>
+  <string id="str.str_player_father_name.republic" text="Балдзімос"/>
+  <string id="str.str_player_mother_name.republic" text="Тэрэя"/>
+  <string id="str.str_player_little_brother_name.republic" text="Фасос"/>
   <string id="str.str_player_little_sister_name.republic" text="Элія"/>
   <string id="str.str_faction_official.ariorum" text="сэві"/>
   <string id="str.str_faction_official.ariorum_f" text="сэві"/>
@@ -150,9 +150,9 @@
   <string id="str.str_faction_formal_name_for_culture.ariorum" text="Арыёрумскае Гандлёвае Герцагства"/>
   <string id="str.str_neutral_term_for_culture.ariorum" text="Арыёрум"/>
   <string id="str.str_player_brother_name.ariorum" text="Нэтанас"/>
-  <string id="str.str_player_father_name.ariorum" text="Болдзімас"/>
-  <string id="str.str_player_mother_name.ariorum" text="Цырыя"/>
-  <string id="str.str_player_little_brother_name.ariorum" text="Фэйсас"/>
+  <string id="str.str_player_father_name.ariorum" text="Балдзімос"/>
+  <string id="str.str_player_mother_name.ariorum" text="Тэрэя"/>
+  <string id="str.str_player_little_brother_name.ariorum" text="Фасос"/>
   <string id="str.str_player_little_sister_name.ariorum" text="Элія"/>
  </strings>
 </base>
