--- a/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYl/std_strings.xml
+++ b/пераклады модаў/CalradiaExpandedKingdoms/v1.3.2/Belarusian.CalradiaExpandedKingdoms/ModuleData/Languages/BYl/std_strings.xml
@@ -5,11 +5,11 @@
   <string id="str.str_culture_description.vagir" text="Vahiry - heta sumieś paŭnočnikaŭ Sturhii i niezadavolenych Battanijcaŭ. Hetaje pierakryžavańnie kulturaŭ zrabiła ich mocnymi i tryvałymi, zdolnymi z lohkaściu pieraadolvać hustyja śniehapady i hłuchija lasy. Zdajecca, pakul ich susiedzi majuć namier vajavać adzin z adnym, jany spadziajucca, što heta daść im čas umacavacca i padrychtavacca da prychodu vajny ŭ maładoje haspadarstva."/>
   <string id="str.str_culture_description.rhodok" text="Vłandyjcy - naščadki avanturystaŭ z zachadu, jakija stahodździami žyli pad uładaj Impieryi, pierš čym sfarmavać niezaležnaje karaleŭstva. Z zaniapadam Impierskaj ułady jany pieratvarylisia ŭ dobra arhanizavanaje fieadalnaje hramadstva, uznačalenaje kastaj vajaŭničych šlachcičaŭ, jakija addajuć pieravahu vajnie dzidami na koniach i piešym."/>
   <string id="str.str_culture_description.apolssalian" text="Apołselcy pryjšli z poŭdnia. Jany vajujuć dobra arhanizavanymi fałanhami kapijnikaŭ pry padtrymcy chutkaj vieršnicy. Apołselcy vałodajuć dobrymi inžyniernymi viedami, a kłas handlaroŭ aščadny i praniklivy. Hetaje spałučeńnie pryvodzić da dobraha zabiaśpiečeńnia haspadarstva. Chacia isnuje niejkaja ścisnutaść u srodkach, kali sprava dachodzić da razdačy zołata."/>
-  <string id="str.str_culture_description.lyrion" text="Liryjcy prybyli z paŭdniova-ŭschodnich ziemlaŭ i imkliva zavajavali Eserajaŭ. Dziakujučy majsterskim strałkam i dobra ŭzbrojenaj šlachcie ich źmiašanaja taktyka zdabyła vierch nad handlarami pustelni Nachasa."/>
+  <string id="str.str_culture_description.lyrion" text="Liryjcy prybyli z paŭdniova-ŭschodnich ziemlaŭ i imkliva zavajavali Aserajaŭ. Dziakujučy majsterskim strałkam i dobra ŭzbrojenaj šlachcie ich źmiašanaja taktyka zdabyła vierch nad handlarami pustelni Nachasa."/>
   <string id="str.str_culture_description.rebkhu" text="Chierhity poŭnyja rašučaści zasialać svaje ziemli i baranić ichnija miežy. Kab ažyciavić hetaje, jany imknucca chutka atrymać prasunutyja inžyniernyja viedy. Zjaŭlajučysia ŭ kulturnym spryčynieńni majsterskimi vieršnikami i histaryčnymi kačeŭnikami, ich lidary prasoŭvajuć svaju kulturu napierad u intelektualnym płanie, što pryvodzić da nieadnaznačnych vynikaŭ."/>
   <string id="str.str_culture_description.paleician" text="Karenny narod Kalradyi, palejcy, na praciahu mnohich stahodździaŭ pryhnietaŭsia i vykarystoŭvaŭsia jak druhi hatunak amal usimi inšymi haspadarstvami hetaha kraja, ale nie ciapier. Palejcy skarystalisia chaosam vajny i paŭstali, kab zajavić svaje pravy na Kalradyju. Jany zabrali bolšuju častku zbroi i brani ŭ zrynutych Vłandyjcaŭ dy chutka sprabujuć zaćvierdzicca ŭ jakaści sapraŭdnych haspadaroŭ hetaha kraja."/>
   <string id="str.str_culture_description.republic" text="Drajatyčnaja Respublika kirujecca narodam dla naroda. Dla hetaha abirajucca sienatary i słužboŭcy, jakija adkazvajuć pierad abranym kanhresam. Chacia hetaja biurakratyja zapavolvaje pryniaćcie častki pastanovaŭ, jana pryvodzić da ŭzrostu pačućcia słužeńnia i abaviazku siarod nasielnictva."/>
-  <string id="str.str_culture_description.ariorum" text="Vyspa była vyjhrany ŭ ryzykovaj hulni miž Parfalijosam i Impierataram Drosijasam, jaki za apošnija hady nazapasiŭ šmat pazykaŭ u siamji Serapidas. Vyspa ŭrehulavała ich. Parfalijos zmoh stvaryć na vyśpie niejtralnaje haspadarstva i pieratvaryć jaho ŭ bahaty handlovy centar miž poŭnačču i poŭdniem."/>
+  <string id="str.str_culture_description.ariorum" text="Vyspa była vyjhrany ŭ ryzykovaj hulni miž Porfalijosam i Impierataram Drosijasam, jaki za apošnija hady nazapasiŭ šmat pazykaŭ u siamji Sierapides. Vyspa ŭrehulavała ich. Porfalijosam zmoh stvaryć na vyśpie niejtralnaje haspadarstva i pieratvaryć jaho ŭ bahaty handlovy centar miž poŭnačču i poŭdniem."/>
   <string id="str.str_culture_rich_name.nordling" text="Nordlinh"/>
   <string id="str.str_culture_rich_name.vagir" text="Vahir"/>
   <string id="str.str_culture_rich_name.rhodok" text="Rodak"/>
@@ -66,7 +66,7 @@
   <string id="str.str_faction_formal_name_for_culture.rhodok" text="Vłandyjskaje Rajalistva"/>
   <string id="str.str_neutral_term_for_culture.rhodok" text="Vłandyjskaje Rajalistva"/>
   <string id="str.str_player_brother_name.rhodok" text="Nohand"/>
-  <string id="str.str_player_father_name.rhodok" text="Bołdrym"/>
+  <string id="str.str_player_father_name.rhodok" text="Baldrym"/>
   <string id="str.str_player_mother_name.rhodok" text="Terta"/>
   <string id="str.str_player_little_brother_name.rhodok" text="Varyk"/>
   <string id="str.str_player_little_sister_name.rhodok" text="Alda"/>
@@ -81,7 +81,7 @@
   <string id="str.str_neutral_term_for_culture.apolssalian" text="Apołselija"/>
   <string id="str.str_player_brother_name.apolssalian" text="Nejdžyn"/>
   <string id="str.str_player_father_name.apolssalian" text="Baładzir"/>
-  <string id="str.str_player_mother_name.apolssalian" text="Tajra"/>
+  <string id="str.str_player_mother_name.apolssalian" text="Cira"/>
   <string id="str.str_player_little_brother_name.apolssalian" text="Facid"/>
   <string id="str.str_player_little_sister_name.apolssalian" text="Alija"/>
   <string id="str.str_faction_official.lyrion" text="ebry"/>
@@ -95,7 +95,7 @@
   <string id="str.str_neutral_term_for_culture.lyrion" text="Liryja"/>
   <string id="str.str_player_brother_name.lyrion" text="Nejdžyn"/>
   <string id="str.str_player_father_name.lyrion" text="Baładzir"/>
-  <string id="str.str_player_mother_name.lyrion" text="Tajra"/>
+  <string id="str.str_player_mother_name.lyrion" text="Cira"/>
   <string id="str.str_player_little_brother_name.lyrion" text="Facid"/>
   <string id="str.str_player_little_sister_name.lyrion" text="Alija"/>
   <string id="str.str_faction_official.rebkhu" text="bieh"/>
@@ -122,9 +122,9 @@
   <string id="str.str_faction_formal_name_for_culture.paleician" text="Palejckaja Impieryja"/>
   <string id="str.str_neutral_term_for_culture.paleician" text="Palejcyja"/>
   <string id="str.str_player_brother_name.paleician" text="Netanas"/>
-  <string id="str.str_player_father_name.paleician" text="Bołdzimas"/>
-  <string id="str.str_player_mother_name.paleician" text="Cyryja"/>
-  <string id="str.str_player_little_brother_name.paleician" text="Fejsas"/>
+  <string id="str.str_player_father_name.paleician" text="Bałdzimos"/>
+  <string id="str.str_player_mother_name.paleician" text="Tereja"/>
+  <string id="str.str_player_little_brother_name.paleician" text="Fasos"/>
   <string id="str.str_player_little_sister_name.paleician" text="Elija"/>
   <string id="str.str_faction_official.republic" text="mahistrat"/>
   <string id="str.str_faction_official.republic_f" text="mahistrat"/>
@@ -136,9 +136,9 @@
   <string id="str.str_faction_formal_name_for_culture.republic" text="Kalradyjskaja Respublika"/>
   <string id="str.str_neutral_term_for_culture.republic" text="Respublika"/>
   <string id="str.str_player_brother_name.republic" text="Netanas"/>
-  <string id="str.str_player_father_name.republic" text="Bołdzimas"/>
-  <string id="str.str_player_mother_name.republic" text="Cyryja"/>
-  <string id="str.str_player_little_brother_name.republic" text="Fejsas"/>
+  <string id="str.str_player_father_name.republic" text="Bałdzimos"/>
+  <string id="str.str_player_mother_name.republic" text="Tereja"/>
+  <string id="str.str_player_little_brother_name.republic" text="Fasos"/>
   <string id="str.str_player_little_sister_name.republic" text="Elija"/>
   <string id="str.str_faction_official.ariorum" text="sevi"/>
   <string id="str.str_faction_official.ariorum_f" text="sevi"/>
@@ -150,9 +150,9 @@
   <string id="str.str_faction_formal_name_for_culture.ariorum" text="Aryjorumskaje Handlovaje Hiercahstva"/>
   <string id="str.str_neutral_term_for_culture.ariorum" text="Aryjorum"/>
   <string id="str.str_player_brother_name.ariorum" text="Netanas"/>
-  <string id="str.str_player_father_name.ariorum" text="Bołdzimas"/>
-  <string id="str.str_player_mother_name.ariorum" text="Cyryja"/>
-  <string id="str.str_player_little_brother_name.ariorum" text="Fejsas"/>
+  <string id="str.str_player_father_name.ariorum" text="Bałdzimos"/>
+  <string id="str.str_player_mother_name.ariorum" text="Tereja"/>
+  <string id="str.str_player_little_brother_name.ariorum" text="Fasos"/>
   <string id="str.str_player_little_sister_name.ariorum" text="Elija"/>
  </strings>
 </base>
