--- a/пераклады модаў/Europe_LemmyProject/1.2.9.3/Belarusian.Europe_LemmyProject/ModuleData/Languages/BYc/module_strings.xml
+++ b/пераклады модаў/Europe_LemmyProject/1.2.9.3/Belarusian.Europe_LemmyProject/ModuleData/Languages/BYc/module_strings.xml
@@ -2,7 +2,7 @@
 <base xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" type="string">
 <strings>
 <!--input/module_strings/module_strings_byzantine.xml-->
-<string id="byz776J8Fng" text="Болдзімас " />
+<string id="byz776J8Fng" text="Балдзімос " />
 <string id="byzyvdQ9MD6" text="Цірыя " />
 <string id="byzantinedescription" text="Запаўняльнік " />
 <string id="byzantinemembers" text="Бізантыя " />
@@ -37,7 +37,7 @@
 <string id="goldenhordecultureneutralterm" text="Залатая Арда"/>
 <string id="goldenhordemembers" text="Залатая Арда"/>
 <!--input/module_strings/module_strings_persian.xml-->
-<string id="E11PE_desc" text="Пасьля Арабскай заваёвы Сасанідзкай Імперыі, ў часы сярэднявечча, Арабскія халіфаты пачалі панаваць у краі. Цягам наступных стагодзьдзяў адбывалася павольная Ісламізацыя Персіі. Пазьней на ўскрайках заняпадаючага Аббасідзскага Халіфата паўстаў шэраг Ісламскіх Персіцкіх Панстваў, у тым ліку Саманіды IX века, падчас панаваньня якіх Персіцкая мова ўпершыню за два стагодзьдзя стала выкарыстоўвацца афіцыйна."/>
+<string id="E11PE_desc" text="Пасьля Арабскай заваёвы Сасанідзкай Імперыі ў часы сярэднявечча, Арабскія халіфаты пачалі панаваць у краі. Цягам наступных стагодзьдзяў адбывалася павольная Ісламізацыя Персіі. Пазьней на ўскрайках заняпадаючага Аббасідзскага Халіфата паўстаў шэраг Ісламскіх Персіцкіх Панстваў, у тым ліку Саманіды IX века, падчас панаваньня якіх Персіцкая мова ўпершыню за два стагодзьдзя стала выкарыстоўвацца афіцыйна."/>
 <string id="E11PE_adj_cul" text="Персія"/>
 <string id="E11PE_cul_name" text="Персія"/>
 <string id="E11PE_ruler_title" text="{?RULER.GENDER}Султана{?}Султан{\?} {RULER.NAME}"/>
@@ -74,13 +74,13 @@
 <string id="samifather" text="Эрык"/>
 <string id="samimother" text="Фрэя"/>
 <string id="samidescription" text="Саамы - гэта жыхары Лапландзкага краю, што размаўляюць на Саамскай мове. Сёньня Лапландыя займае большую паўночную частку Нарвегіі, Швецыі, Фінляндыі і Кольскай паўвыспы, што належыць Расеі. Гістарычна Саамы доўгі час насялялі ўсю Фінляндыю і Ўсходнюю Карэлію. Але ўсходнія Саамы асіміляваліся з Фінскім і Карэльскім насельніцтвам пасьля міграцыі з Хамэ, Саво і Карэліі. Назвы мясьцін, напрыклад, Нуксіо на паўднёвым узьбярэжжы Фінляндыі, сьведчаць пра старое селішча Саамаў. Але з часам Саамы ўсё больш зьмешваліся з Фінскім і Скандынаўскім насельніцтвам, страчваючы сваю культуру і мову."/>
-<string id="samirulertitle" text="{RULER.NAME} {?RULER.GENDER}Вышэйшая Правадырка{?}Вышэйшы Правадыр{\?}"/>
-<string id="saminobletitle" text="{RULER.NAME} {?RULER.GENDER}Правадырка{?}Правадыр{\?}"/>
+<string id="samirulertitle" text="{?RULER.GENDER}Вышэйшая Правадырка{?}Вышэйшы Правадыр{\?} {RULER.NAME}"/>
+<string id="saminobletitle" text="{?RULER.GENDER}Правадырка{?}Правадыр{\?} {RULER.NAME}"/>
 <string id="samiofficial" text="правадыр"/>
 <string id="samiofficialf" text="правадырка"/>
 <string id="samiruler" text="правадыр"/>
 <string id="samirulerf" text="правадырка"/>
-<string id="samirulerterm" text="{RULER.NAME} {?RULER.GENDER}Вышэйшая Правадырка{?}Вышэйшы Правадыр{\?}"/>
+<string id="samirulerterm" text="{?RULER.GENDER}Вышэйшая Правадырка{?}Вышэйшы Правадыр{\?} {RULER.NAME}"/>
 <string id="samifactionadjective" text="Саамы"/>
 <string id="samifactionshortterm" text="Саамы"/>
 <string id="samifactionformalname" text="Саамы"/>
