--- a/пераклады модаў/Europe_LemmyProject/1.2.9.3/Belarusian.Europe_LemmyProject/ModuleData/Languages/BYl/module_strings.xml
+++ b/пераклады модаў/Europe_LemmyProject/1.2.9.3/Belarusian.Europe_LemmyProject/ModuleData/Languages/BYl/module_strings.xml
@@ -2,7 +2,7 @@
 <base xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" type="string">
 <strings>
 <!--input/module_strings/module_strings_byzantine.xml-->
-<string id="byz776J8Fng" text="Bołdzimas " />
+<string id="byz776J8Fng" text="Bałdzimos " />
 <string id="byzyvdQ9MD6" text="Ciryja " />
 <string id="byzantinedescription" text="Zapaŭnialnik " />
 <string id="byzantinemembers" text="Bizantyja " />
@@ -37,7 +37,7 @@
 <string id="goldenhordecultureneutralterm" text="Załataja Arda"/>
 <string id="goldenhordemembers" text="Załataja Arda"/>
 <!--input/module_strings/module_strings_persian.xml-->
-<string id="E11PE_desc" text="Paśla Arabskaj zavajovy Sasanidzkaj Impieryi, ŭ časy siaredniaviečča, Arabskija chalifaty pačali panavać u krai. Ciaham nastupnych stahodździaŭ adbyvałasia pavolnaja Isłamizacyja Piersii. Paźniej na ŭskrajkach zaniapadajučaha Abbasidzskaha Chalifata paŭstaŭ šerah Isłamskich Piersickich Panstvaŭ, u tym liku Samanidy IX vieka, padčas panavańnia jakich Piersickaja mova ŭpieršyniu za dva stahodździa stała vykarystoŭvacca aficyjna."/>
+<string id="E11PE_desc" text="Paśla Arabskaj zavajovy Sasanidzkaj Impieryi ŭ časy siaredniaviečča, Arabskija chalifaty pačali panavać u krai. Ciaham nastupnych stahodździaŭ adbyvałasia pavolnaja Isłamizacyja Piersii. Paźniej na ŭskrajkach zaniapadajučaha Abbasidzskaha Chalifata paŭstaŭ šerah Isłamskich Piersickich Panstvaŭ, u tym liku Samanidy IX vieka, padčas panavańnia jakich Piersickaja mova ŭpieršyniu za dva stahodździa stała vykarystoŭvacca aficyjna."/>
 <string id="E11PE_adj_cul" text="Piersija"/>
 <string id="E11PE_cul_name" text="Piersija"/>
 <string id="E11PE_ruler_title" text="{?RULER.GENDER}Sułtana{?}Sułtan{\?} {RULER.NAME}"/>
@@ -74,13 +74,13 @@
 <string id="samifather" text="Eryk"/>
 <string id="samimother" text="Freja"/>
 <string id="samidescription" text="Saamy - heta žychary Łapłandzkaha kraju, što razmaŭlajuć na Saamskaj movie. Siońnia Łapłandyja zajmaje bolšuju paŭnočnuju častku Narviehii, Šviecyi, Finlandyi i Kolskaj paŭvyspy, što naležyć Rasiei. Histaryčna Saamy doŭhi čas nasialali ŭsiu Finlandyju i Ŭschodniuju Kareliju. Ale ŭschodnija Saamy asimilavalisia z Finskim i Karelskim nasielnictvam paśla mihracyi z Chame, Savo i Karelii. Nazvy miaścin, naprykład, Nuksio na paŭdniovym uźbiarežžy Finlandyi, śviedčać pra staroje sielišča Saamaŭ. Ale z časam Saamy ŭsio bolš źmiešvalisia z Finskim i Skandynaŭskim nasielnictvam, stračvajučy svaju kulturu i movu."/>
-<string id="samirulertitle" text="{RULER.NAME} {?RULER.GENDER}Vyšejšaja Pravadyrka{?}Vyšejšy Pravadyr{\?}"/>
-<string id="saminobletitle" text="{RULER.NAME} {?RULER.GENDER}Pravadyrka{?}Pravadyr{\?}"/>
+<string id="samirulertitle" text="{?RULER.GENDER}Vyšejšaja Pravadyrka{?}Vyšejšy Pravadyr{\?} {RULER.NAME}"/>
+<string id="saminobletitle" text="{?RULER.GENDER}Pravadyrka{?}Pravadyr{\?} {RULER.NAME}"/>
 <string id="samiofficial" text="pravadyr"/>
 <string id="samiofficialf" text="pravadyrka"/>
 <string id="samiruler" text="pravadyr"/>
 <string id="samirulerf" text="pravadyrka"/>
-<string id="samirulerterm" text="{RULER.NAME} {?RULER.GENDER}Vyšejšaja Pravadyrka{?}Vyšejšy Pravadyr{\?}"/>
+<string id="samirulerterm" text="{?RULER.GENDER}Vyšejšaja Pravadyrka{?}Vyšejšy Pravadyr{\?} {RULER.NAME}"/>
 <string id="samifactionadjective" text="Saamy"/>
 <string id="samifactionshortterm" text="Saamy"/>
 <string id="samifactionformalname" text="Saamy"/>
