--- a/пераклады модаў/Europe_LemmyProject/1.2.9.3/Belarusian.Europe_LemmyProject/ModuleData/Languages/BYc/lords.xml
+++ b/пераклады модаў/Europe_LemmyProject/1.2.9.3/Belarusian.Europe_LemmyProject/ModuleData/Languages/BYc/lords.xml
@@ -3,13 +3,13 @@
 <strings>
 <string id="Ayyubid_Ayyubid_r3oIoCr8" text="Ас-Саліх Аюб " />
 <string id="Ayyubid_Ayyubid_JhLPgr5x" text="Джында Аюб " />
-<string id="Ayyubid_xC3kCGte" text="Дзіюл " />
+<string id="Ayyubid_xC3kCGte" text="Дзіюл" />
 <string id="Ayyubid_TfNSLFNF" text="Аніда Аюб " />
 <string id="Ayyubid_WTCIOhvV" text="Нукар Аюб " />
 <string id="Ayyubid_psnfaZbC" text="Сайра Аюб " />
 <string id="Ayyubid_13YN3S79" text="Разана Аюб " />
 <string id="Ayyubid_n2FdWOtE" text="Ас-Саліх Ісмаіл " />
-<string id="Ayyubid_JPBz1blG" text="Тэрык Ісмаіл " />
+<string id="Ayyubid_JPBz1blG" text="Тарык Ісмаіл " />
 <string id="Ayyubid_6WWJpv88" text="Мара Ісмаіл " />
 <string id="Ayyubid_saaeExBg" text="Аддас Ісмаіл " />
 <string id="Ayyubid_vAKB54zO" text="Арва Ісмаіл " />
@@ -20,7 +20,7 @@
 <string id="Ayyubid_MlmPJ502" text="Мэнан Давуд " />
 <string id="Ayyubid_IgSZcCW0" text="Карыт Давуд " />
 <string id="Ayyubid_NiOxe8Y2" text="Юдзіра Давуд " />
-<string id="Ayyubid_brZGZw7D" text="Эзіна Давуд " />
+<string id="Ayyubid_brZGZw7D" text="Азіна Давуд " />
 <string id="Ayyubid_HSlqsoPK" text="Тамза Мухамад " />
 <string id="Ayyubid_sPSqyA4R" text="Сасаіта Мухамад " />
 <string id="Ayyubid_NOchnEwX" text="Газід Мухамад " />
@@ -28,29 +28,29 @@
 <string id="Ayyubid_DADHWcX4" text="Бушыла Мухамад " />
 <string id="Ayyubid_Er3eFLdH" text="Аль-Насір Мухамад " />
 <string id="Ayyubid_aVkqqEOx" text="Фарына Мухамад " />
-<string id="Ayyubid_kvxnbHjF" text="Ялас " />
-<string id="Ayyubid_Atuo4eR7" text="Шайма " />
-<string id="Ayyubid_DsduCz91" text="Сэніт " />
+<string id="Ayyubid_kvxnbHjF" text="Іялас " />
+<string id="Ayyubid_Atuo4eR7" text="Шаіма " />
+<string id="Ayyubid_DsduCz91" text="Саніт " />
 <string id="Ayyubid_gQ1JZ8ow" text="Ухай " />
-<string id="Ayyubid_5xOBW2Qz" text="Ашыза " />
+<string id="Ayyubid_5xOBW2Qz" text="Ашыса " />
 <string id="Ayyubid_VAAIYJqI" text="Талас " />
 <string id="Ayyubid_DuTdWRbB" text="Фарзана " />
 <string id="Ayyubid_t31RboMa" text="Хафіса " />
 <string id="Ayyubid_OtzsT453" text="Зуад " />
 <string id="Ayyubid_FP1nudkE" text="Джальфар " />
-<string id="Ayyubid_sABDrRyF" text="Аўдэн " />
-<string id="Ayyubid_7ZFm3GTF" text="Сальма " />
-<string id="Ayyubid_EFgG35sB" text="Зулайка " />
-<string id="Ayyubid_iU8D2Psj" text="Сольхана " />
+<string id="Ayyubid_sABDrRyF" text="Авдан " />
+<string id="Ayyubid_7ZFm3GTF" text="Салма " />
+<string id="Ayyubid_EFgG35sB" text="Зулаіка " />
+<string id="Ayyubid_iU8D2Psj" text="Сулхана " />
 <string id="Ayyubid_yWPpaXij" text="Кахін " />
-<string id="Ayyubid_q72YO5vb" text="Сукэйна " />
+<string id="Ayyubid_q72YO5vb" text="Сукаіна " />
 <string id="Ayyubid_Xs2Ffm4I" text="Хашан " />
 <string id="Ayyubid_Zq11L8aO" text="Яміна " />
 <string id="Ayyubid_KFYNhxLC" text="Суна " />
 <string id="Ayyubid_buvim3t7" text="Занува " />
-<string id="Ayyubid_MOH80RNb" text="Хахара " />
-<string id="Ayyubid_ndSKTPib" text="Экар " />
-<string id="Ayyubid_j3iaqr6v" text="Цыка " />
+<string id="Ayyubid_MOH80RNb" text="Хаджара " />
+<string id="Ayyubid_ndSKTPib" text="Акар " />
+<string id="Ayyubid_j3iaqr6v" text="Ціка " />
 <string id="Ayyubid_03vNcoOt" text="Дзіла " />
 <string id="Ayyubid_lRjHdd5l" text="Кабан " />
 <string id="byzkadJAjaA" text="Алексіус " />
@@ -76,7 +76,7 @@
 <string id="byz5eTb2xr7" text="Констанцін " />
 <string id="byzYBGCXSEx" text="Іяанна " />
 <string id="byzP7iNhhPl" text="Джорджыас " />
-<string id="byzfGp76I0G" text="Кальлінія " />
+<string id="byzfGp76I0G" text="Калінія " />
 <string id="byzPQoWbtKo" text="Сінізіас " />
 <string id="byzQGIAbglw" text="Ізакіас " />
 <string id="byzBosCJ3Rb" text="Пелагія " />
