--- a/пераклады модаў/Europe_LemmyProject/1.2.9.3/Belarusian.Europe_LemmyProject/ModuleData/Languages/BYl/lords.xml
+++ b/пераклады модаў/Europe_LemmyProject/1.2.9.3/Belarusian.Europe_LemmyProject/ModuleData/Languages/BYl/lords.xml
@@ -3,13 +3,13 @@
 <strings>
 <string id="Ayyubid_Ayyubid_r3oIoCr8" text="As-Salich Ajub " />
 <string id="Ayyubid_Ayyubid_JhLPgr5x" text="Džynda Ajub " />
-<string id="Ayyubid_xC3kCGte" text="Dzijuł " />
+<string id="Ayyubid_xC3kCGte" text="Dzijuł" />
 <string id="Ayyubid_TfNSLFNF" text="Anida Ajub " />
 <string id="Ayyubid_WTCIOhvV" text="Nukar Ajub " />
 <string id="Ayyubid_psnfaZbC" text="Sajra Ajub " />
 <string id="Ayyubid_13YN3S79" text="Razana Ajub " />
 <string id="Ayyubid_n2FdWOtE" text="As-Salich Ismaił " />
-<string id="Ayyubid_JPBz1blG" text="Teryk Ismaił " />
+<string id="Ayyubid_JPBz1blG" text="Taryk Ismaił " />
 <string id="Ayyubid_6WWJpv88" text="Mara Ismaił " />
 <string id="Ayyubid_saaeExBg" text="Addas Ismaił " />
 <string id="Ayyubid_vAKB54zO" text="Arva Ismaił " />
@@ -20,7 +20,7 @@
 <string id="Ayyubid_MlmPJ502" text="Menan Davud " />
 <string id="Ayyubid_IgSZcCW0" text="Karyt Davud " />
 <string id="Ayyubid_NiOxe8Y2" text="Judzira Davud " />
-<string id="Ayyubid_brZGZw7D" text="Ezina Davud " />
+<string id="Ayyubid_brZGZw7D" text="Azina Davud " />
 <string id="Ayyubid_HSlqsoPK" text="Tamza Muchamad " />
 <string id="Ayyubid_sPSqyA4R" text="Sasaita Muchamad " />
 <string id="Ayyubid_NOchnEwX" text="Hazid Muchamad " />
@@ -28,29 +28,29 @@
 <string id="Ayyubid_DADHWcX4" text="Bušyła Muchamad " />
 <string id="Ayyubid_Er3eFLdH" text="Al-Nasir Muchamad " />
 <string id="Ayyubid_aVkqqEOx" text="Faryna Muchamad " />
-<string id="Ayyubid_kvxnbHjF" text="Jałas " />
-<string id="Ayyubid_Atuo4eR7" text="Šajma " />
-<string id="Ayyubid_DsduCz91" text="Senit " />
+<string id="Ayyubid_kvxnbHjF" text="Ijałas " />
+<string id="Ayyubid_Atuo4eR7" text="Šaima " />
+<string id="Ayyubid_DsduCz91" text="Sanit " />
 <string id="Ayyubid_gQ1JZ8ow" text="Uchaj " />
-<string id="Ayyubid_5xOBW2Qz" text="Ašyza " />
+<string id="Ayyubid_5xOBW2Qz" text="Ašysa " />
 <string id="Ayyubid_VAAIYJqI" text="Tałas " />
 <string id="Ayyubid_DuTdWRbB" text="Farzana " />
 <string id="Ayyubid_t31RboMa" text="Chafisa " />
 <string id="Ayyubid_OtzsT453" text="Zuad " />
 <string id="Ayyubid_FP1nudkE" text="Džalfar " />
-<string id="Ayyubid_sABDrRyF" text="Aŭden " />
-<string id="Ayyubid_7ZFm3GTF" text="Salma " />
-<string id="Ayyubid_EFgG35sB" text="Zułajka " />
-<string id="Ayyubid_iU8D2Psj" text="Solchana " />
+<string id="Ayyubid_sABDrRyF" text="Avdan " />
+<string id="Ayyubid_7ZFm3GTF" text="Sałma " />
+<string id="Ayyubid_EFgG35sB" text="Zułaika " />
+<string id="Ayyubid_iU8D2Psj" text="Sułchana " />
 <string id="Ayyubid_yWPpaXij" text="Kachin " />
-<string id="Ayyubid_q72YO5vb" text="Sukejna " />
+<string id="Ayyubid_q72YO5vb" text="Sukaina " />
 <string id="Ayyubid_Xs2Ffm4I" text="Chašan " />
 <string id="Ayyubid_Zq11L8aO" text="Jamina " />
 <string id="Ayyubid_KFYNhxLC" text="Suna " />
 <string id="Ayyubid_buvim3t7" text="Zanuva " />
-<string id="Ayyubid_MOH80RNb" text="Chachara " />
-<string id="Ayyubid_ndSKTPib" text="Ekar " />
-<string id="Ayyubid_j3iaqr6v" text="Cyka " />
+<string id="Ayyubid_MOH80RNb" text="Chadžara " />
+<string id="Ayyubid_ndSKTPib" text="Akar " />
+<string id="Ayyubid_j3iaqr6v" text="Cika " />
 <string id="Ayyubid_03vNcoOt" text="Dziła " />
 <string id="Ayyubid_lRjHdd5l" text="Kaban " />
 <string id="byzkadJAjaA" text="Aleksius " />
@@ -76,7 +76,7 @@
 <string id="byz5eTb2xr7" text="Konstancin " />
 <string id="byzYBGCXSEx" text="Ijaanna " />
 <string id="byzP7iNhhPl" text="Džordžyas " />
-<string id="byzfGp76I0G" text="Kallinija " />
+<string id="byzfGp76I0G" text="Kalinija " />
 <string id="byzPQoWbtKo" text="Sinizias " />
 <string id="byzQGIAbglw" text="Izakias " />
 <string id="byzBosCJ3Rb" text="Piełahija " />
